--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Colegio
-            <img src="" alt="goku ssj5">
+            <img src="download.jpeg" alt="download.jpeg">
         </h1>
     </header>
 </body>
