--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
             <img src="download.jpeg" alt="download.jpeg">
         </h1>
     </header>
+    <section class="section1">
+     <h2>section 1</h2>
+    </section>
+    <section class="section2">
+        <h3>section 2</h3>
+    </section>
 </body>
 </html>
